--- a/_posts/2024-11-11-minimax.md
+++ b/_posts/2024-11-11-minimax.md
@@ -5,9 +5,9 @@ categories: jekyll update
 ---
 
 
-Have you ever wondered how computers play game? And, surprising thing is they do win
+Have you ever wondered how computers play games? And, surprising thing is they do win
 with best possible results? You may say yeah that is whole points of computer - to solve
-problems and do math, but shouldn't there me some techniques because just 
+problems and do math, but shouldn't there be some techniques because just 
 having an oven and flour does not bake the bun itself.
 
 Today, I will help you understand one of such game playing algorithm. The algorithm is
@@ -24,9 +24,9 @@ The **minimax** algorithm is a recursive decision-making algorithm. It is used i
 two-player turn-based games like chess and tic-tac-toe. Well, it sounds fancy but
 the core logic is just playing all* possible moves and choosing the best result.
 
-We should think it this way, suppose we have a game with out any algorithm or anything,
+We should think it this way, suppose we have a game without any algorithm or anything,
 one player plays a move so does the other, this continues, but the twist  is one of the
-player implementing the algorithm (which is obvisouly always the computer), plays all
+player implementing the algorithm (which is obvisously always the computer), plays all
 possible states separately before playing its turn, checks the best result
 and then plays the move, this does sounds very simple and lame because it is.
 
@@ -45,7 +45,7 @@ certain depth.*
 
 ## Implementing only the tic-tac-toe
 
-We will frist start by only implementing the core game - a simple CLI program using 
+We will first start by only implementing the core game - a simple CLI program using 
 [python](https://www.python.org/downloads/), the second best programming language in 
 the world. We assume, `x` the *human player* and `o` is the *computer player* which 
 will be the maximizing player playing with **minimax** algorithm as its brain.
@@ -126,7 +126,7 @@ def human_move():
 
 Also, these are functions are also fairly simple. `available_moves` - checks empty 
 spaces in the `board`, `get_user_input` - function as name says gets valid input from 
-the user from CLI, `human_move` - used along side `get_user_user_input` - completing 
+the user from CLI, `human_move` - used alongside `get_user_input` - completing 
 the user side of game playing logic.
 
 ```python
@@ -157,7 +157,7 @@ def check_over() -> bool:
     return False
 ```
 
-Also a basic function for better user exprience. Combining all the above codes and
+Also a basic function for better user experience. Combining all the above codes and
 the `main` function from below to get basic **tic-tac-toe** implementation.
 
 
