--- a/_posts/2025-11-03-nn-numpy.md
+++ b/_posts/2025-11-03-nn-numpy.md
@@ -194,22 +194,24 @@ Output Layer (10 neurons, Softmax)
 This is a fully connected (dense) feedforward network.
 
 
-## Data Flow in Single Perceptron
+## Data Flow in the network
 
 ![single-neuron](/assets/img/single-neuron.png)
 
-Taking just one example input and a neuron of the first layer, `z1`  is the
-mathematical operation that is happening during the forward propagation in the 
-network. In order to get this operation we perform the matrix multiplication with NumPy
-with `@` operator on the arrays. We use [ReLU](https://en.wikipedia.org/wiki/Rectified_linear_unit)
-as an activation function in the first layer. Activation functions are important 
-neural networks because without then it only becomes a linear regression.
+For first layer, talking one example input image and a neuron, we obtain `a1` 
+as the output. The operation performed on batch of input array and all the neurons of 
+the first layer to yield `z1` is simply the matrix multiplication `@`. After which we
+perform the [ReLU](https://en.wikipedia.org/wiki/Rectified_linear_unit) activation 
+function which is fairly simple to implement. Due to this matrix operation you might 
+see transpose operation `<array>.T` being performed in order to obtain the required 
+output else where in the code.
 
 ![relu-plot](/assets/img/relu-plot.png)
 
+
 $$
 
-{\displaystyle \operatorname {ReLU} (x)=x^{+}=f(x)=\max(0,x)={\frac {x+|x|}{2}}={\begin{cases}x&{\text{if }}x>0,\\0&x\leq 0\end{cases}}}
+{\displaystyle \operatorname {ReLU} (x)=f(x)=x^{+}=\max(0,x)={\frac {x+|x|}{2}}={\begin{cases}x&{\text{if }}x>0,\\0&x\leq 0\end{cases}}}
 
 $$
 
@@ -219,8 +221,8 @@ def ReLU(z):
     return np.maximum(0, z)
 ```
 
-We will be need the derivative of ReLU during the backpropagation so lets look at
-their implementation and plot too.
+We will be needing the derivative of ReLU function during the backpropagation so lets 
+take a look its implementation and plot as well.
 
 ![relu-derivative-plot](/assets/img/relu-derivative-plot.png)
 
@@ -235,5 +237,20 @@ $$
 def ReLU_deriv(z):
     return (z > 0).astype(np.float64)
 ```
+
+Similarly, taking the single output from first layer into the second layer is almost the
+same expect for the activation function. In the second layer we will be using
+[Softmax](https://en.wikipedia.org/wiki/Softmax_function) function.
+
+![single-neuron2](/assets/img/single-neuron2.png)
+
+
+$$
+
+{\displaystyle \sigma (\mathbf {z} )_{i}={\frac {e^{z_{i}}}{\sum _{j=1}^{K}e^{z_{j}}}}\,.}
+
+$$
+
+
 
 *[WIP]...*
